--- a/routingandmore/src/App.css
+++ b/routingandmore/src/App.css
@@ -36,3 +36,14 @@
     transform: rotate(360deg);
   }
 }
+
+.navbar{
+display: 'flex';
+ justify-content: space-around;
+ align-items: flex-end;
+ color: 'black';
+ padding: '20px'; 
+ text-decoration: none;
+
+
+}
